--- a/scratch/package.json
+++ b/scratch/package.json
@@ -1,6 +1,6 @@
 {
-  "type": "module",
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
