--- a/examples/angular/angular-app-v1/package.json
+++ b/examples/angular/angular-app-v1/package.json
@@ -25,6 +25,7 @@
     "@angular-devkit/build-angular": "^19.2.11",
     "@angular/cli": "^19.2.11",
     "@angular/compiler-cli": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
@@ -32,6 +33,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "typescript": "~5.7.2"
   }
 }
