--- a/scratch/angular/app-formularios/package.json
+++ b/scratch/angular/app-formularios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contador-app",
+  "name": "app-formularios",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -17,10 +17,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "@tailwindcss/postcss": "^4.1.8",
-    "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
