--- a/examples/spring-boot/BookStore/src/main/resources/application.properties
+++ b/examples/spring-boot/BookStore/src/main/resources/application.properties
@@ -1,11 +1,22 @@
 spring.application.name=BookStore
 
-spring.datasource.url=jdbc:h2:mem:bookstoredb
-spring.datasource.username=root
-spring.datasource.password=123
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# postgres
+spring.datasource.url=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432/postgres?user=postgres.ulcvevlyqophlqpajvho&password=root
+# spring.datasource.username=postgres.ulcvevlyqophlqpajvho
+# spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
+
+
+# h2 database
+# spring.datasource.url=jdbc:h2:mem:bookstoredb
+# spring.datasource.username=root
+# spring.datasource.password=123
+
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.defer-datasource-initialization=true
+# spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
