to-do fix: correct postgres usage

--- a/examples/spring-boot/ClothesStore/src/main/resources/application.properties
+++ b/examples/spring-boot/ClothesStore/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 spring.application.name=ClothesStore
 
-spring.datasource.url=jdbc:h2:mem:clothesdb
-spring.datasource.username=root
-spring.datasource.password=root
+# postgres
+spring.datasource.url=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432/postgres?user=postgres.ulcvevlyqophlqpajvho&password=Root123Ifpb456
+spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.username=postgres.ulcvevlyqophlqpajvho
+# spring.datasource.password=Root123Ifpb456
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# H2 Database
+# spring.datasource.url=jdbc:h2:mem:clothesdb
+# spring.datasource.username=root
+# spring.datasource.password=root
+
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
